--- a/linter/main/templates/main/prog.html
+++ b/linter/main/templates/main/prog.html
@@ -14,8 +14,8 @@
     <div class="row">
         {% include "./helpers/patern.html" %}
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-            <h2>{{title}}.py version- {{version}}</h2>
-
+            <h1>{{title}}</h1>
+            <h2>version- {{version}}</h2>
             <span class="align-middle">
                 <h3>status:
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-circle-fill" fill="currentColor"
@@ -63,17 +63,6 @@
                                 view</a>
                         </td>
                         <td>{{dat.score}}</td>
-                        {% if dat.r_err_text|length %}
-                        <td>
-                            <a class="btn btn-danger btn-sm" href="/runtime/{{title}}/{{dat.time}}" role="button">Errors
-                                - view</a>
-                        </td>
-                        {% else %}
-                        <td>
-                            <a class="btn btn-info btn-sm" href="/runtime/{{title}}/{{dat.time}}" role="button">Execution
-                                result - view</a>
-                        </td>
-                        {% endif %}
                     </tr>
                     {% endfor %}
                     </tbody>
