--- a/linter/main/templates/main/helpers/login.html
+++ b/linter/main/templates/main/helpers/login.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="form-label-group">
-        <input type="text" class="form-control" name="password" placeholder="Password" value="" required="">
+        <input type="password" class="form-control" name="password" placeholder="Password" value="" required="">
     </div>
 
     <div class="checkbox mb-3"></div>
