--- a/linter/main/templates/main/prog.html
+++ b/linter/main/templates/main/prog.html
@@ -11,12 +11,19 @@
 </head>
 <body>
 {% include "./helpers/header.html" %}
+{% if messages %}
+<p class="messages">
+    {% for message in messages %}
+    <p class="{{ message.tags }}" style="text-align: center"> {{ message }}</p>
+    {% endfor %}
+<p>
+{% endif %}
 <div class="container-fluid">
     <div class="row">
         {% include "./helpers/patern.html" %}
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
             <div class="float-right mt-3">
-                <a type="button"  href="/report/{{p_id}}" class="btn btn-dark">Download report (.xlsx)</a>
+                <a type="button" href="/report/{{p_id}}" class="btn btn-dark">Download report (.xls)</a>
             </div>
             <h1>{{title}}</h1>
             <h2>version- {{version}}</h2>
@@ -46,10 +53,11 @@
 
             <div class="d-flex flex-row mt-2 mb-2">
                 {% for dat in dataset %}
-                <button type=submit id="changer_{{dat.version}}" class="btn btn-secondary py-2 px-3 mr-1">Version {{ dat.version }}</button>
+                <button type=submit id="changer_{{dat.version}}" class="btn btn-secondary py-2 px-3 mr-1">Version {{dat.version}}
+                </button>
                 {% endfor %}
             </div>
-            <div  class="table-responsive">
+            <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr>
@@ -78,6 +86,7 @@
           }
         )
 {% endfor %}
+
 
 </script>
 </body>
