--- a/linter/main/templates/main/helpers/header.html
+++ b/linter/main/templates/main/helpers/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Linter
+        <a class="navbar-brand" href="/">Linter
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bug" fill="currentColor"
                  xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd"
